Update ArrayListStack.java